# streamdoc-dl

./: .gitignore  README.md  pyproject.toml  ruff.toml  streamdoc_dl.py
.github/workflows/: lint.yml  publish.yml  test.yml
