[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "streamdoc-dl"
version = "0.2.2"
description = "Download PDFs from ePapyrus StreamDocs viewers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "requests[socks]",
    "reportlab",
]

[project.scripts]
streamdoc-dl = "streamdoc_dl:main"

[project.urls]
Homepage = "https://github.com/OctopusET/streamdoc-dl"
